creation du bordure et du navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 </head>
 
 <body>
-
+    <!-- background du header -->
+    <div class="bg-header-home"></div>
+    <main class="bordure">
+        <!-- notre navbar -->
+        <nav>
+            <a href=""><img src="Logos/logohome.png" alt="logohome"></a>
+            <div class="nav-link">
+                <ul>
+                    <li><a class="active" href="index.html">HOME</a></li>
+                    <li><a class="" href="game.html">GAME</a></li>
+                </ul>
+            </div>
+        </nav>
+    </main>
 </body>
 
 </html>
