creation du footer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
                 </ul>
             </div>
         </nav>
+        <footer>
+            <div class="container foot">
+                <img src="Logos/icon_WB.png" alt="icon_WB">
+                <p class=""> Ce projet respecte l’univers cinématographique des films Batman récents. Version Nolan & Snyder & Reeves</p>
+            </div>
+            <div class="container foot">
+                <a href=""><img src="Logos/logo_sayna_white.png" alt="Logo_sayna"></a>
+                <a href=""><img src="Logos/icon_x.png" alt="icon_x"></a>
+                <a href=""><img src="Logos/icon_DC.png" alt="icon_DC"></a>
+                <a href=""><img src="Logos/icon_facebook.png" alt="icon_Facebook"></a>
+                <a href=""><img src="Logos/icon_ig.png" alt="icon_Instagram"></a>
+                <a href=""><img src="Logos/icon_tw.png" alt="icon_Twitter"></a>
+            </div>
+        </footer>
     </main>
 </body>
 
