ajout des reseaux socio fixé

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
                 </ul>
             </div>
         </nav>
+        <aside>
+            <a href=""><img src="Logos/logo_bat_fleche.png" alt="fleche1"></a><br><br>
+            <div class="reseaux-socio">
+                <a href=""><img src="Logos/icon_facebook.png" alt=""></a><br><br>
+                <a href=""><img src="Logos/icon_ig.png" alt=""></a><br><br>
+                <a href=""><img src="Logos/icon_tw.png" alt=""></a><br><br>
+            </div>
+            <a href="#formulaire"><img src="Logos/logo_bat_fleche_2.png" alt="fleche2"></a>
+        </aside>
         <footer>
             <div class="container foot">
                 <img src="Logos/icon_WB.png" alt="icon_WB">
