ajout des elements dans le header home

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 </ul>
             </div>
         </nav>
+        <!-- reseaux-socio -->
         <aside>
             <a href=""><img src="Logos/logo_bat_fleche.png" alt="fleche1"></a><br><br>
             <div class="reseaux-socio">
@@ -34,6 +35,19 @@
             </div>
             <a href="#formulaire"><img src="Logos/logo_bat_fleche_2.png" alt="fleche2"></a>
         </aside>
+        <!-- text header -->
+        <div class="grid">
+            <div class="text-head">
+                <p> Au nom de ses parents assassinés, Bruce Wayne mène <br> une guerre éternelle contre les criminels de Gotham City. <br> Il est vengeur. Il est la nuit.
+                </p><br>
+                <h1>Il est Batman</h1><br><br>
+                <div class="bouttons">
+                    <a href="">VOIR LES HEROS</a>
+                    <a href="">LES ADVERSAIRES</a>
+                </div>
+            </div>
+        </div>
+        <!-- notre footer -->
         <footer>
             <div class="container foot">
                 <img src="Logos/icon_WB.png" alt="icon_WB">
