ajout du premiere contenu section1 BATMAN AU CINEMA

--- a/index.html
+++ b/index.html
@@ -39,14 +39,56 @@
         <div class="grid">
             <div class="text-head">
                 <p> Au nom de ses parents assassinés, Bruce Wayne mène <br> une guerre éternelle contre les criminels de Gotham City. <br> Il est vengeur. Il est la nuit.
-                </p><br>
-                <h1>Il est Batman</h1><br><br>
+                </p>
+                <h1>Il est Batman</h1>
                 <div class="bouttons">
                     <a href="">VOIR LES HEROS</a>
                     <a href="">LES ADVERSAIRES</a>
                 </div>
             </div>
+            <img src="Logos/fleche_down_header.png" alt="fleche_down_header">
         </div>
+        <section class="bloc">
+            <h1>BATMAN AU CINEMA</h1>
+            <p>Le personnage de Batman est un super héros de l’univers de DC Comics. Il a été créé par le dessinateur Bob Kane et le scénariste Bill Finger et apparaît pour la première fois dans le comic book Detective Comics en 1939. Batman se différencie
+                de Superman, alors héros majeur de DC, car il n’a aucun pouvoir. Il sera porté au cinema pour la première fois en 1943 par Lewis Wilson et bénéficiera de nombreux reboot, donnant l’occasion à de multiples acteurs d’interpréter l’homme
+                chauve-souris. Voici les trois derniers :</p>
+            <div class="gallery">
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome2.png" alt="Robert Pattinson">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div id="Robert">Robert Pattinson <br> <b>(2022)</b> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome3.png" alt="Christian Bale">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div id="Bale">Christian Bale <br> <b>(2006 2008 2012)</b> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome4.png" alt="Ben Affleck">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div id="Ben">Ben Affleck <br> <b>2016-2017/2020 2023</b> </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- notre footer -->
         <footer>
             <div class="container foot">
