ajout des toutes les contenues

--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
             </div>
             <img src="Logos/fleche_down_header.png" alt="fleche_down_header">
         </div>
+        <!-- batman au cinema -->
         <section class="bloc">
             <h1>BATMAN AU CINEMA</h1>
             <p>Le personnage de Batman est un super héros de l’univers de DC Comics. Il a été créé par le dessinateur Bob Kane et le scénariste Bill Finger et apparaît pour la première fois dans le comic book Detective Comics en 1939. Batman se différencie
                 de Superman, alors héros majeur de DC, car il n’a aucun pouvoir. Il sera porté au cinema pour la première fois en 1943 par Lewis Wilson et bénéficiera de nombreux reboot, donnant l’occasion à de multiples acteurs d’interpréter l’homme
                 chauve-souris. Voici les trois derniers :</p>
             <div class="gallery">
-                <div class="gallery-items">
-                    <img src="Illustrations/Bathome2.png" alt="Robert Pattinson">
-                    <div class="desc">
+                <div class="gallery-items ">
+                    <img src="Illustrations/Bathome2.png" alt="Robert Pattinson" onmouseover="mOver(this)" onmouseout="mOut(this)">
+                    <div class="desc" id="ani">
                         <div class="form-ronde">
                             <img src="" alt="">
                         </div>
@@ -65,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gallery-items">
+                <div class="gallery-items" onmouseover="mOver(this)" onmouseout="mOut(this)">
                     <img src="Illustrations/Bathome3.png" alt="Christian Bale">
                     <div class="desc">
                         <div class="form-ronde">
@@ -76,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gallery-items">
+                <div class="gallery-items" onmouseover="mOver(this)" onmouseout="mOut(this)">
                     <img src="Illustrations/Bathome4.png" alt="Ben Affleck">
                     <div class="desc">
                         <div class="form-ronde">
@@ -89,7 +90,189 @@
                 </div>
             </div>
         </section>
+        <!-- nemesis -->
+        <section class="bloc">
+            <div class="nemesis">
+                <h1>NEMESIS</h1>
+                <img src="Illustrations/Bathome13.png" width="150px" alt="">
+            </div>
+            <p>
+                Batman souhaite éradiquer la criminalité de Gotham. C’est pourquoi, il affrontera la plupart du temps, des vilains sans capacités surnaturelles mais particulièrement violents ou psychopathes. Avec son introduction dans la Justice League il aura l’occasion
+                de se mesurer à des antagonistes qui défient l’imagination et les lois de la physique. Parmi les derniers ennemis emblématiques que nous avons pu voir au cinéma, on retrouve :
+            </p>
+            <div class="gallery">
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome5.png" alt="The Riddler Paul Dano">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div id="">The Riddler Paul Dano<br> <b>(2022)</b> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome6.png" alt="Christian Bale">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div id="">Le Joker Heath Ledger <br> <b>(2008)</b> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome7.png" alt="Ben Affleck">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div id="">Darkseid Ray Porter <br> <b>(2022) </b></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- allié -->
+        <section class="bloc">
+            <div class="allies">
+                <h1>ALLIES</h1>
+                <img src="Illustrations/Bathome12.png" width="350px" alt="">
+            </div>
+            <p>Alfred est le majordome des Wayne. A leur mort il s’occupe de l’éducation du jeune Bruce avant de l’assister dans son rôle du Batman. Ce dernier rencontrera Catwoman dès le premier numéro des aventures de l’homme-chauve souris en 1940. Tantôt
+                ennemie tantôt alliée la jeune femme fatale fera tourner la tête de Batman à maintes reprises. Du côté de la police, Bruce pourra compter sur l’aide infaillible de James Gordon, “Jim , qui désire lui aussi nettoyer sa ville de la criminalité
+                qui y règne.</p>
+            <div class="gallery">
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome9.png" alt="Alfred Pennyworth Michael">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div>Alfred Pennyworth Michael Cain <br> <b> (2006 2008 2012)</b></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome8.png" alt="Catwoman Zoé Kravitz">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div>Catwoman Zoé Kravitz <br> <b>(2008)</b> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-items">
+                    <img src="Illustrations/Bathome10.png" alt="James Gordon">
+                    <div class="desc">
+                        <div class="form-ronde">
+                            <img src="" alt="">
+                        </div>
+                        <div class="desc-text">
+                            <div>James Gordon <br> <b>(2014 2019)</b> </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- justice league -->
+        <section class="bloc">
+            <h1>JUSTICE LEAGUE</h1>
+            <P>Lorsque la Terre est menacée les plus grands super-héros s’allient pour la protéger. Ils doivent cependant apprendre à se faire confiance mutuellement et à faire équipe ce qui ne sera pas chose aisée. Ensemble ils forment la Justice League,
+                les plus grands superhéros de la Terre, ceux vers qui le monde entier se tourne lorsque les menaces extraterrestres ou surnaturelles menacent son existence.</P>
+            <div class="justice">
+                <img src="Illustrations/Bathome11.png" width="100%" alt="">
+            </div>
+        </section>
+        <!-- Multimedia -->
+        <section class="bloc">
+            <h1>MULTIMEDIA</h1>
+            <div class="multimedia">
+
+                <a href=""><img class="fleche-g-d" src="Logos/icon_fleche_1.png" alt="icon_fleche_1"></a>
+                <div class="box">
+                    <img src="Illustrations/Bathome_ba1.png" alt="Bathome_ba1">
+                    <div class="box-text">
+                        <h4>A c t i o n , A d v e n t u r e </h4>
+                        <h4 class="rajdhani">Batman Begins</h4>
+                        <h4> IMDB: <b>8.2</b></b>
+                        </h4>
+                        <p>
+                            Le jeune Bruce Wayne assiste impuissant au meurtre de ses parents. Profondément traumatisé, il grandit obnubilé par un désir de vengeance. La Ligue des ombres, une secte de guerriers ninja dirigée par Ra's al Ghul, se chargera de son entraînement. De
+                            retour chez lui à Gotham, avec l'aide de son majordome Alfred Pennyworth, Bruce Wayne se lance alors dans la lutte contre le crime sous le nom de Batman
+                        </p>
+                    </div>
+                </div>
+                <a href=""><img class="fleche-g-d" src="Logos/icon_fleche_2.png" alt="icon_fleche_2"></a>
+            </div>
+        </section>
+        <!-- video -->
+        <section class="bloc">
+            <div class="video">
+                <iframe width="100%" height="455" src="https://www.youtube.com/embed/jXrFsn9pcZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </section>
         <!-- notre footer -->
+        <div id="formulaire">
+            <form action="">
+                <h1>PRENOMS CONTACT</h1>
+                <label for="">ADRESSE EMAIL</label><br><br>
+                <input class="f-control" placeholder="Adresse email" type="text" required><br><br>
+
+                <label for="">NEWSLETTER</label><br><br> <span>En cochant cette case vous acceptez de recevoir l’actualité concernant les aventures de Batman :</span>
+                <input type="checkbox" required><br>
+                <select class="f-control" required>
+                            <option value="" disabled selected hidden>Choisissez la fréquence à laquelle vous souhaitez recevoir votre newsletter</option>
+                            <option value="">Une fois par semaine</option>
+                            <option value="">Une fois toutes les deux semaines (2 fois par mois)</option>
+                            <option value="">Une fois par mois</option>
+                            <option value="">Une fois toutes les trois mois</option>
+                            <option value="">Une fois toutes les six mois</option>
+                        </select><br><br>
+                <label for="">MESSAGE</label><br><br>
+                <input class="f-control" placeholder="Souhaitez vous recevoir des news " type="text" required><br><br>
+                <div class="choice">
+                    <input type="radio" name="choix" class="choix choix1" id="a">
+                    <label for="a">Des films</label>
+
+                    <input type="radio" name="choix" class="choix choix2" id="b">
+                    <label for="b">Des comics</label>
+
+                    <input type="radio" name="choix" class="choix choix3" id="c">
+                    <label for="c">De tout</label>
+                </div><br><br>
+                <div class="confirmation">
+                    <input class="btn" type="submit" onclick="confirmer()" value="CONFIRMER">
+                </div><br>
+            </form>
+        </div>
+        <div class="pre-footer">
+            <img src="Logos/icon_guillemets_1.png" width="80px" height="60px" alt="icon_guillemets_1">
+            <div>
+                <p class=""> La seule façon raisonnable de vivre en ce bas monde,<br> c'est en dehors des règles. <br><br>
+                    <p class=""> The Dark Knight : Le Chevalier Noir -
+                        <br> Le Joker à Batman (2008) </p><br>
+                </p><br>
+                <div class="center">
+                    <label for="" class="ronde"></label>
+                    <label for="" class="ronde"></label>
+                    <label for="" class="ronde"></label>
+                    <label for="" class="ronde"></label>
+                    <label for="" class="ronde color"></label>
+                    <label for="" class="ronde"></label>
+                    <label for="" class="ronde"></label>
+                    <label for="" class="ronde"></label>
+                    <label for="" class="ronde"></label>
+                </div>
+            </div>
+            <img src="Logos/icon_guillemets_2.png" width="80px" height="60px" alt="icon_guillemets_2">
+        </div>
         <footer>
             <div class="container foot">
                 <img src="Logos/icon_WB.png" alt="icon_WB">
